panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__preprocessor__test_error_undef_of_non_identifier.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/preprocessor/test_error_undef_of_non_identifier.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: `#undef` of non-identifier `+`
   ╭─[panko/tests/cases/preprocessor/test_error_undef_of_non_identifier.c:1:8]
   │
 1 │ #undef +
   │ ────── ┬  
   │        ╰── only identifiers can be `#undef`d
───╯
