panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__preprocessor__test_error_va_opt_outside_of_variadic_macro.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/preprocessor/test_error_va_opt_outside_of_variadic_macro.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: `__VA_OPT__` outside of variadic macro
   ╭─[panko/tests/cases/preprocessor/test_error_va_opt_outside_of_variadic_macro.c:1:21]
   │
 1 │ #define MACRO(x, y) __VA_OPT__(42 -) x + y
   │                     ─────┬────  
   │                          ╰────── `__VA_OPT__` is forbidden outside of variadic macros
───╯
